# simple-usb-uart-loger

./: .gitmodules  CMakeLists.txt  README.md  index.html
assets/: index-CKmHy7Eu.js  index-Ce1UPk9F.js  index-Cg9QiT_C.js  index-DTpNSteV.css  index-DnFzi6Bb.js  index-DzRAW7iA.js  index-az0Xs4OW.js
simple-usb-uart-loger-vue-app/: README.md  index.html  main.js  package-lock.json  package.json  serial.js  style.css  vite.config.js
src/: led.c  led.h  main.c  tusb_config.h  uart.c  uart.h  usb.c  usb.h
web/: README.md  application.js
